[package]
name = "noughts-and-crosses-console"
version = "0.1.1"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/efunb/rustGame"
description = """
RustGame.
"""
[dependencies]

noughts_and_crosses_lib = "0.0.3"
dont_disappear = "1"
read_input = "0.8"

